Fix multiple things, especially creating a genre
